place title in secondary cube for landscape viewports

--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -30,7 +30,11 @@
 
         <mesh class="cube cube-secondary">
             <face class="cube-face bottom"></face>
-            <face class="cube-face front"></face>
+            <face class="cube-face front">
+                <div class="absolute-bottom-left">
+                    <a href="{{site.baseurl}}/"><h1 class="h h1-no-margin button">JULIAN BLANE</h1></a>
+                </div>
+            </face>
             <face class="cube-face right"></face>
         </mesh>
 
