--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,6 +6,8 @@ layout: site-grandeur
     <title>{{ page.short_title }} | {{ site.title }}</title>
 </head>
 
+{% unless page.has_about_post %}
 <h1 class="no-margin-top">{{ page.short_title }}</h1>
+{% endunless %}
 
 {% include gallery.html posts=page.posts %}
