--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,3 +1,13 @@
+:root {
+    --gallery-columns: 3;
+}
+
+@media screen and (min-width: 1024px) {
+    :root {
+        --gallery-columns: 6;
+    }
+}
+
 body {
     min-height: 100vh;
     position: relative;
@@ -77,18 +87,24 @@ footer > .links > a > img {
 .post-preview-fade,
 .post-preview-body {
     position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0
+    inset: 0;
 }
 
 .post-preview-body {
-    padding: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
     width: auto;
     height: 100%;
+    font-size: 1.25em;
 }
 
-.post-preview-body>h2 {
+@media screen and (min-width: 1024px) {
+    .post-preview-body {
+        font-size: 1em;
+    }
+}
+
+.post-preview-body>h1 {
     color: white;
 }
 
@@ -218,16 +234,9 @@ footer > .links > a > img {
 /* gallery */
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(var(--gallery-columns), minmax(0, 1fr));
     grid-auto-rows: 1fr;
     gap: .5em;
-}
-
-
-@media screen and (min-width: 1024px) {
-    .grid-container {
-        grid-template-columns: repeat(6, minmax(0, 1fr));
-    }
 }
 
 /* add an invisible element to enforce proportions */
@@ -264,6 +273,11 @@ footer > .links > a > img {
 
 .grid-container>.horizontal {
     grid-column-end: span 3;
+}
+
+.grid-container>.breaker {
+    grid-column-end: span var(--gallery-columns);
+    grid-row-end: span 2;
 }
 
 /* short page */
