--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -18,7 +17,9 @@
             <face class="cube-face bottom"></face>
             <face class="cube-face left">
                 <div class="absolute-bottom-left">
-                    <a href="{{site.baseurl}}/"><h1 class="h h1-no-margin button">JULIAN BLANE</h1></a>
+                    <a href="{{site.baseurl}}/"><h1 class="h h1-no-margin button">
+                        {{ page.header }}
+                    </h1></a>
                 </div>
             </face>
             <face class="cube-face front">
@@ -32,7 +33,9 @@
             <face class="cube-face bottom"></face>
             <face class="cube-face front">
                 <div class="absolute-bottom-left">
-                    <a href="{{site.baseurl}}/"><h1 class="h h1-no-margin button">JULIAN BLANE</h1></a>
+                    <a href="{{site.baseurl}}/"><h1 class="h h1-no-margin button">
+                        {{ page.header }}
+                    </h1></a>
                 </div>
             </face>
             <face class="cube-face right"></face>
