update footer links link

--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -63,7 +63,7 @@
             2024 Julian Blane
         </div>
         <div class="links">
-            <a href="{{ site.baseurl }}/links/">
+            <a href="{{ site.baseurl }}/links">
                 <img src="{{ site.baseurl }}/assets/external/logos/yt-mono-dark-icon.png" style="height: 1em;" alt="youtube">
                 <img src="{{ site.baseurl }}/assets/external/logos/tiktok-mono-dark-icon.png" style="height: 1em;" alt="tiktok">
                 <img src="{{ site.baseurl }}/assets/external/logos/ig-mono-dark.png" style="height: 1em;" alt="instagram">
