--- a/_includes/post-identifier.html
+++ b/_includes/post-identifier.html
@@ -6,6 +6,9 @@
     {% if include.show_tags %}
     {{ include.post.tags | join: ' ' }}
     {% endif %}
+    {% if include.show_project %}
+     »
+    {% endif %}
     {% if include.show_date %}
     <div class="post-identifier-date">
         {{ include.post.date | split: ' ' | first | replace: '-', '' }}
