--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -24,7 +24,9 @@
             </face>
             <face class="cube-face front">
                 <div class="absolute-bottom-right text-align-right">
-                    <a href=#todo class="h h2-no-margin button">TODO: titles</a>
+                    {% for project in site.data.projects %}
+                        <a href="{{ site.baseurl }}/{{ project[1].url }}" class="h h-project button" id="nav-{{project[0]}}">{{ project[1].name }}</a><br>
+                    {% endfor %}
                 </div>
             </face>
         </mesh>
