open external links in new tab

--- a/_includes/social-media-icons.html
+++ b/_includes/social-media-icons.html
@@ -1,16 +1,16 @@
 <div class="short-links">
     {% if include.youtube %}
-    <a href="https://www.youtube.com/@{{include.youtube}}">
+    <a href="https://www.youtube.com/@{{include.youtube}}" target="_blank">
         <img src="{{ site.baseurl }}/assets/external/logos/yt-mono-dark.png" style="height: 1em;" alt="youtube">
     </a>
     {% endif %}
     {% if include.tiktok %}
-    <a href="https://www.tiktok.com/@{{include.tiktok}}">
+    <a href="https://www.tiktok.com/@{{include.tiktok}}" target="_blank">
         <img src="{{ site.baseurl }}/assets/external/logos/tiktok-mono-dark.png" style="height: 1em;" alt="tiktok">
     </a>
     {% endif %}
     {% if include.instagram %}
-    <a href="https://www.instagram.com/{{include.instagram}}/">
+    <a href="https://www.instagram.com/{{include.instagram}}/" target="_blank">
         <img src="{{ site.baseurl }}/assets/external/logos/ig-mono-dark.png" style="height: 1em;" alt="instagram">
     </a>
     {% endif %}
