--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -255,7 +255,7 @@ footer > .links > a > img {
 }
 
 .grid-container>div {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: var(--sky-colour-right-facing);
     text-align: center;
     overflow: hidden;
 }
