--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -16,4 +16,4 @@ layout: site-grandeur
 <h1 class="no-margin-top">{{ page.short_title }}</h1>
 {% endunless %}
 
-{% include gallery.html posts=page.posts %}
+{% include gallery.html posts=page.posts show_tags=true %}
