overhaul julianblane to olsedba

--- a/_layouts/site-grandeur.html
+++ b/_layouts/site-grandeur.html
@@ -17,9 +17,17 @@
             <face class="cube-face bottom"></face>
             <face class="cube-face left">
                 <div class="absolute-bottom-left">
-                    <a href="{{site.baseurl}}/"><h1 class="h h1-no-margin button">
-                        {{ page.header }}
-                    </h1></a>
+                    <a href="{{site.baseurl}}/">
+                        <h1 class="h h1-no-margin button" style="justify-self: left;">
+                        OL
+                        </h1>
+                        <h1 class="h h1-no-margin button" style="justify-self: center;">
+                        SED
+                        </h1>
+                        <h1 class="h h1-no-margin button" style="justify-self: right;">
+                        BA
+                        </h1>
+                    </a>
                 </div>
             </face>
             <face class="cube-face front">
@@ -35,9 +43,17 @@
             <face class="cube-face bottom"></face>
             <face class="cube-face front">
                 <div class="absolute-bottom-left">
-                    <a href="{{site.baseurl}}/"><h1 class="h h1-no-margin button">
-                        {{ page.header }}
-                    </h1></a>
+                    <a href="{{site.baseurl}}/">
+                        <h1 class="h h1-no-margin button" style="justify-self: left;">
+                        OL
+                        </h1>
+                        <h1 class="h h1-no-margin button" style="justify-self: center;">
+                        SED
+                        </h1>
+                        <h1 class="h h1-no-margin button" style="justify-self: right;">
+                        BA
+                        </h1>
+                    </a>
                 </div>
             </face>
             <face class="cube-face right"></face>
@@ -62,7 +78,7 @@
     </div>
     <footer>
         <div class="author">
-            2024 Julian Blane
+            2025 Julian Blane
         </div>
         <div class="links">
             <a href="{{ site.baseurl }}/links">
